feat: added avatar admin controller (#72)
* feat: added avatar admin controller

* feat: renamed tests

* feat: reordered injections

* fix: format
